added Amazon and Google API's working with interface

--- a/WebContent/pages/private/adm/elasticity.xhtml
+++ b/WebContent/pages/private/adm/elasticity.xhtml
@@ -54,7 +54,7 @@
                 <p:growl id="growl" life="2000" />
                 <p:commandButton value="Create" id="withIcon" actionListener="#{buttonView.buttonAction}" update="growl" icon="ui-icon-star" />
 
-                <p:contextMenu for="instances">
+<!--                <p:contextMenu for="instances">
                     <p:menuitem value="start" icon="fa fa-toggle-right" />
                     <p:menuitem value="stop" icon="fa fa-pause" />
                     <p:menuitem value="reboot"  icon="fa fa-refresh" />
@@ -74,7 +74,7 @@
                     <p:column headerText="State">
                         <h:outputText value="#{instance.state}" />
                     </p:column>
-                </p:dataTable> 
+                </p:dataTable> -->
             </h:form>
             <!--            <h:form>
             
