list of ip if the workflow is not by prediction

--- a/WebContent/pages/private/workflows/workflow_composer.xhtml
+++ b/WebContent/pages/private/workflows/workflow_composer.xhtml
@@ -248,7 +248,7 @@
                                             e da Plataforma de nuvem da UnB celebrado entre a Amazon Web Services, 
                                             Inc., a Google Cloud Platform e a Plataforma de nuvem da UnB e os 
                                             usuários dos serviços da AWS, da Google Cloud Platform e da Plataforma 
-                                            de nuvem da UnB. \n
+                                            de nuvem da UnB.
                                             O presente SLA aplica-se separadamente a cada conta que utilizar o 
                                             BioNimbuZ, no qual utilizam os serviço da Amazon EC2 ou da Amazon EBS ou 
                                             da Google Compute Engine (GCE) ou da Google Cloud Store (GCS) ou da 
@@ -258,7 +258,7 @@
                                             grafadas com letras iniciais maiúsculas assumem os significados a elas 
                                             atribuídos no Contrato do Cliente BioNimbuZ. Reservamo-nos o direito de 
                                             mudar os termos do presente SLA de acordo com o Contrato do Cliente 
-                                            BioNimbuZ." /> 
+                                            BioNimbuZ." styleClass=".preformatted {white-space: pre-wrap;}"/> 
                                            </p:fieldset>
                                         </p:column>
                                     </p:row>
