Fix login background.

--- a/WebContent/pages/public/login.xhtml
+++ b/WebContent/pages/public/login.xhtml
@@ -7,6 +7,11 @@
 
     <h:head>
         <h:outputStylesheet library="css" name="login.css" />
+        <style>
+            body {
+                background-image: url("#{request.contextPath}/resources/img/bground.jpg");
+            }
+        </style>
     </h:head>
 
     <h:body>
