--- a/WebContent/pages/public/login.xhtml
+++ b/WebContent/pages/public/login.xhtml
@@ -6,6 +6,7 @@
       xmlns:p="http://primefaces.org/ui">
 
     <h:head>
+        <link rel="shortcut icon" type="image/x-icon" href="#{request.contextPath}/resources/favicon/favicon.ico" />
         <h:outputStylesheet library="css" name="login.css" />
         <style>
             body {
