começando procedimento de merge da versão final

--- a/WebContent/pages/private/workflows/workflow_composer.xhtml
+++ b/WebContent/pages/private/workflows/workflow_composer.xhtml
@@ -291,6 +291,7 @@
                                     </p:column>-->
 
                                     <p:column>
+                                        <p:button value="Configurar Elasticidade"/>
                                         <p:commandButton actionListener="#{workflowComposerBean.removeElement(instance)}" icon="ui-icon-trash"  update="instancesList, :form:growl"/>
                                     </p:column>
                                 </p:dataTable>
