--- a/WebContent/pages/private/files/upload_file.xhtml
+++ b/WebContent/pages/private/files/upload_file.xhtml
@@ -19,7 +19,7 @@
                     <br />
                     <p:panel>
                         <p:fileUpload id="file_upload" mode="advanced" 
-                                      dragDropSupport="false" multiple="false" 
+                                      dragDropSupport="false" multiple="true" 
                                       invalidFileMessage="Formato de arquivo inválido"
                                       fileUploadListener="#{fileUploadBean.handleUploadedFile}"
                                       cancelLabel="Cancelar" uploadLabel="Enviar"
