Correção - dependência de etapas de workflow, sem depender do output da etapa anterior

--- a/WebContent/pages/private/workflows/workflow_composer.xhtml
+++ b/WebContent/pages/private/workflows/workflow_composer.xhtml
@@ -481,7 +481,7 @@
     <!-- ***************************************************************************************************************** -->
     <!-- File Dialog: Used for the user to pick inputs -->
     <p:dialog id="file_dlg1" widgetVar="file_dlg" showEffect="fade" header="Entrada"
-              hideEffect="fade" modal="true" closable="false" style="800px" autoUpdate="True">
+              hideEffect="fade" modal="true" closable="true" style="800px" autoUpdate="True">
         <h:form id="file_form">
             <p:panel  id="files">
                 Escolha a o arquivo de entrada deste passo e seus parâmetros.
